Bug 454597 - Wallpaper type is not saved after switching desktop layout
Summary: Wallpaper type is not saved after switching desktop layout
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks: 407619
  Show dependency treegraph
 
Reported: 2022-05-30 06:03 UTC by Fushan Wen
Modified: 2022-06-06 08:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2022-05-30 06:03:34 UTC
Information for package plasma5-workspace:
------------------------------------------
Repository     : @System
Name           : plasma5-workspace
Version        : 5.25.80git.20220530T000635~19084358-ku.130.1
Arch           : x86_64
Vendor         : obs://build.opensuse.org/KDE:Unstable
Installed Size : 27.7 MiB
Installed      : Yes
Status         : up-to-date
Source package : plasma5-workspace-5.25.80git.20220530T000635~19084358-ku.130.1.src
Upstream URL   : http://www.kde.org/
Summary        : The KDE Plasma Workspace Components
Description    : 
    This package contains the basic packages for a Plasma workspace.
Comment 1 Bug Janitor Service 2022-05-30 06:12:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1784
Comment 2 Fushan Wen 2022-06-06 08:55:27 UTC
Git commit a5165fb6e607b91d5b1fa730e8e62563357ed89c by Fushan Wen.
Committed on 06/06/2022 at 08:40.
Pushed by fusionfuture into branch 'master'.

shell: preserve wallpaper type after changing desktop layout

restore(...) will set the wallpaper type from the value of key "wallpaperplugin".
FIXED-IN: 5.24.6

M  +1    -2    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/a5165fb6e607b91d5b1fa730e8e62563357ed89c
Comment 3 Fushan Wen 2022-06-06 08:56:01 UTC
Git commit 7d931ee57c9b033e8f7048d1d087de6027a5bf0f by Fushan Wen.
Committed on 06/06/2022 at 08:55.
Pushed by fusionfuture into branch 'Plasma/5.25'.

shell: preserve wallpaper type after changing desktop layout

restore(...) will set the wallpaper type from the value of key "wallpaperplugin".
FIXED-IN: 5.24.6


(cherry picked from commit a5165fb6e607b91d5b1fa730e8e62563357ed89c)

M  +1    -2    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/7d931ee57c9b033e8f7048d1d087de6027a5bf0f
Comment 4 Fushan Wen 2022-06-06 08:56:29 UTC
Git commit 9f17db0e121c3e0a2f102df4af89cb788ceb9d07 by Fushan Wen.
Committed on 06/06/2022 at 08:56.
Pushed by fusionfuture into branch 'Plasma/5.24'.

shell: preserve wallpaper type after changing desktop layout

restore(...) will set the wallpaper type from the value of key "wallpaperplugin".
FIXED-IN: 5.24.6


(cherry picked from commit a5165fb6e607b91d5b1fa730e8e62563357ed89c)

M  +1    -2    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/9f17db0e121c3e0a2f102df4af89cb788ceb9d07