shell: preserve wallpaper type after changing desktop layout

restore(...) will set the wallpaper type from the value of key "wallpaperplugin".

BUG: 454597
FIXED-IN: 5.24.6


(cherry picked from commit a5165fb6e607b91d5b1fa730e8e62563357ed89c)